2007/10/22	fix paths, bug: #12231
2007/10/21	init changlog
		get database from env(MTAG_DB) if set