@@ -26,7 +26,7 @@
   <tr class="memlist"><td><a class="el" href="classmeta.html#222f2367f0941b23640b118225f3a031">search</a>(const char *tag, TagLib::StringList *files)</td><td><a class="el" href="classmeta.html">meta</a></td><td><code> [static]</code></td></tr>
   <tr class="memlist"><td><a class="el" href="classmeta.html#5666d71ddbdd168c80a3d72f927f33d1">setTags</a>(char *filename, TagLib::StringList tags)</td><td><a class="el" href="classmeta.html">meta</a></td><td><code> [static]</code></td></tr>
   <tr class="memlist"><td><a class="el" href="classmeta.html#55ab3376597d6fae1447d51d9f492a6d">syncdir</a>(const char *dirname)</td><td><a class="el" href="classmeta.html">meta</a></td><td><code> [static]</code></td></tr>
-</table><hr size="1"><address style="text-align: right;"><small>Generated on Fri Oct 19 14:20:44 2007 for mtag by&nbsp;
+</table><hr size="1"><address style="text-align: right;"><small>Generated on Mon Oct 22 09:12:12 2007 for mtag by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.2 </small></address>
 </body>
