@@ -28,7 +28,7 @@
   <tr class="memlist"><td><a class="el" href="classsql.html#96dbc6d1a0f2023b2749080775858759">search</a>(const char *tag, TagLib::StringList *files)</td><td><a class="el" href="classsql.html">sql</a></td><td><code> [static]</code></td></tr>
   <tr class="memlist"><td><a class="el" href="classsql.html#f7656596a2c606c58890910f21ca8997">search</a>(const char *tag, TagLib::StringList *files, sqlite3 *db)</td><td><a class="el" href="classsql.html">sql</a></td><td><code> [static]</code></td></tr>
   <tr class="memlist"><td><a class="el" href="classsql.html#8b29877a945c3c00172828905c700a11">setDataBase</a>(const char *filename)</td><td><a class="el" href="classsql.html">sql</a></td><td><code> [static]</code></td></tr>
-</table><hr size="1"><address style="text-align: right;"><small>Generated on Fri Oct 19 14:20:44 2007 for mtag by&nbsp;
+</table><hr size="1"><address style="text-align: right;"><small>Generated on Mon Oct 22 09:12:12 2007 for mtag by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.2 </small></address>
 </body>
