@@ -22,7 +22,7 @@
   <tr class="memlist"><td><a class="el" href="classtagger.html#b118d4c6857d9034aee4a5c62f91f0d9">clearTags</a>(const char *filename)</td><td><a class="el" href="classtagger.html">tagger</a></td><td><code> [static]</code></td></tr>
   <tr class="memlist"><td><a class="el" href="classtagger.html#8397e89b996c22614b1d7fc6eba1c630">getTags</a>(const char *filename, TagLib::StringList *tags)</td><td><a class="el" href="classtagger.html">tagger</a></td><td><code> [static]</code></td></tr>
   <tr class="memlist"><td><a class="el" href="classtagger.html#12cc354b1f74d3ddf08d64d9f1232d0a">setTags</a>(const char *filename, TagLib::StringList tags)</td><td><a class="el" href="classtagger.html">tagger</a></td><td><code> [static]</code></td></tr>
-</table><hr size="1"><address style="text-align: right;"><small>Generated on Fri Oct 19 14:20:44 2007 for mtag by&nbsp;
+</table><hr size="1"><address style="text-align: right;"><small>Generated on Mon Oct 22 09:12:12 2007 for mtag by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.2 </small></address>
 </body>
