@@ -20,7 +20,9 @@
 </div>
 <h1>utils Member List</h1>This is the complete list of members for <a class="el" href="classutils.html">utils</a>, including all inherited members.<p><table>
   <tr class="memlist"><td><a class="el" href="classutils.html#3b6b502b484d1c9ace11f07b5d2f7ab3">absPath</a>(const char *path)</td><td><a class="el" href="classutils.html">utils</a></td><td><code> [static]</code></td></tr>
-</table><hr size="1"><address style="text-align: right;"><small>Generated on Fri Oct 19 14:20:44 2007 for mtag by&nbsp;
+  <tr class="memlist"><td><a class="el" href="classutils.html#85f3405b92fc9c6c9104ff785cf5156f">setStripPath</a>(const char *path)</td><td><a class="el" href="classutils.html">utils</a></td><td><code> [static]</code></td></tr>
+  <tr class="memlist"><td><a class="el" href="classutils.html#48c63a00502e96e9a175e4a15fec1aea">stripPath</a>(const char *path)</td><td><a class="el" href="classutils.html">utils</a></td><td><code> [static]</code></td></tr>
+</table><hr size="1"><address style="text-align: right;"><small>Generated on Mon Oct 22 09:12:12 2007 for mtag by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.2 </small></address>
 </body>
