@@ -52,7 +52,7 @@
 <a name="l00073"></a>00073                 <span class="keyword">static</span> <span class="keywordtype">int</span> <a class="code" href="classsql.html#96dbc6d1a0f2023b2749080775858759">search</a>(<span class="keyword">const</span> <span class="keywordtype">char</span>* tag, TagLib::StringList *files);
 <a name="l00077"></a>00077                 <span class="keyword">static</span> <span class="keywordtype">int</span> <a class="code" href="classsql.html#96dbc6d1a0f2023b2749080775858759">search</a>(<span class="keyword">const</span> <span class="keywordtype">char</span>* tag, TagLib::StringList *files, sqlite3* db);
 <a name="l00078"></a>00078 };
-</pre></div><hr size="1"><address style="text-align: right;"><small>Generated on Fri Oct 19 14:20:44 2007 for mtag by&nbsp;
+</pre></div><hr size="1"><address style="text-align: right;"><small>Generated on Mon Oct 22 09:12:12 2007 for mtag by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.2 </small></address>
 </body>
