@@ -52,13 +52,17 @@ Here is a list of all documented class members with links to the class documenta
 , <a class="el" href="classmeta.html#222f2367f0941b23640b118225f3a031">meta</a>
 <li>setDataBase()
 : <a class="el" href="classsql.html#8b29877a945c3c00172828905c700a11">sql</a>
+<li>setStripPath()
+: <a class="el" href="classutils.html#85f3405b92fc9c6c9104ff785cf5156f">utils</a>
 <li>setTags()
-: <a class="el" href="classmeta.html#5666d71ddbdd168c80a3d72f927f33d1">meta</a>
-, <a class="el" href="classtagger.html#12cc354b1f74d3ddf08d64d9f1232d0a">tagger</a>
+: <a class="el" href="classtagger.html#12cc354b1f74d3ddf08d64d9f1232d0a">tagger</a>
+, <a class="el" href="classmeta.html#5666d71ddbdd168c80a3d72f927f33d1">meta</a>
+<li>stripPath()
+: <a class="el" href="classutils.html#48c63a00502e96e9a175e4a15fec1aea">utils</a>
 <li>syncdir()
 : <a class="el" href="classmeta.html#55ab3376597d6fae1447d51d9f492a6d">meta</a>
 </ul>
-<hr size="1"><address style="text-align: right;"><small>Generated on Fri Oct 19 14:20:44 2007 for mtag by&nbsp;
+<hr size="1"><address style="text-align: right;"><small>Generated on Mon Oct 22 09:12:12 2007 for mtag by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.2 </small></address>
 </body>
