@@ -14,7 +14,7 @@
 </div>
 <h1>mtag Documentation</h1>
 <p>
-<h3 align="center">$VERSION$ </h3><hr size="1"><address style="text-align: right;"><small>Generated on Fri Oct 19 14:20:44 2007 for mtag by&nbsp;
+<h3 align="center">$VERSION$ </h3><hr size="1"><address style="text-align: right;"><small>Generated on Mon Oct 22 09:12:12 2007 for mtag by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.2 </small></address>
 </body>
