@@ -54,7 +54,7 @@
 <a name="l00075"></a>00075                 
 <a name="l00082"></a>00082                 <span class="keyword">static</span> <span class="keywordtype">int</span> <a class="code" href="classmeta.html#222f2367f0941b23640b118225f3a031">search</a>(<span class="keyword">const</span> <span class="keywordtype">char</span> *tag, TagLib::StringList *files);
 <a name="l00083"></a>00083 };
-</pre></div><hr size="1"><address style="text-align: right;"><small>Generated on Fri Oct 19 14:20:44 2007 for mtag by&nbsp;
+</pre></div><hr size="1"><address style="text-align: right;"><small>Generated on Mon Oct 22 09:12:12 2007 for mtag by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.2 </small></address>
 </body>
