@@ -43,7 +43,7 @@
 <a name="l00042"></a>00042                 
 <a name="l00047"></a>00047                 <span class="keyword">static</span> <span class="keywordtype">int</span> <a class="code" href="classtagger.html#b118d4c6857d9034aee4a5c62f91f0d9">clearTags</a>(<span class="keyword">const</span> <span class="keywordtype">char</span>* filename);
 <a name="l00048"></a>00048 };
-</pre></div><hr size="1"><address style="text-align: right;"><small>Generated on Fri Oct 19 14:20:44 2007 for mtag by&nbsp;
+</pre></div><hr size="1"><address style="text-align: right;"><small>Generated on Mon Oct 22 09:12:12 2007 for mtag by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.2 </small></address>
 </body>
