@@ -31,10 +31,16 @@
 <a name="l00017"></a>00017 
 <a name="l00021"></a><a class="code" href="classutils.html">00021</a> <span class="keyword">class </span><a class="code" href="classutils.html">utils</a>
 <a name="l00022"></a>00022 {
-<a name="l00023"></a>00023         <span class="keyword">public</span>:
-<a name="l00028"></a>00028                 <span class="keyword">static</span> <span class="keywordtype">string</span> <a class="code" href="classutils.html#3b6b502b484d1c9ace11f07b5d2f7ab3">absPath</a>(<span class="keyword">const</span> <span class="keywordtype">char</span>* path);
-<a name="l00029"></a>00029 };
-</pre></div><hr size="1"><address style="text-align: right;"><small>Generated on Fri Oct 19 14:20:44 2007 for mtag by&nbsp;
+<a name="l00023"></a>00023         <span class="keyword">private</span>:
+<a name="l00024"></a>00024                 <span class="keyword">static</span> <span class="keywordtype">string</span> strippath;
+<a name="l00025"></a>00025         <span class="keyword">public</span>:
+<a name="l00030"></a>00030                 <span class="keyword">static</span> <span class="keywordtype">string</span> <a class="code" href="classutils.html#3b6b502b484d1c9ace11f07b5d2f7ab3">absPath</a>(<span class="keyword">const</span> <span class="keywordtype">char</span>* path);
+<a name="l00031"></a>00031                 
+<a name="l00036"></a>00036                 <span class="keyword">static</span> <span class="keywordtype">void</span> <a class="code" href="classutils.html#85f3405b92fc9c6c9104ff785cf5156f">setStripPath</a>(<span class="keyword">const</span> <span class="keywordtype">char</span>* path);
+<a name="l00037"></a>00037                 
+<a name="l00043"></a>00043                 <span class="keyword">static</span> <span class="keywordtype">string</span> <a class="code" href="classutils.html#48c63a00502e96e9a175e4a15fec1aea">stripPath</a>(<span class="keyword">const</span> <span class="keywordtype">char</span>* path);
+<a name="l00044"></a>00044 };
+</pre></div><hr size="1"><address style="text-align: right;"><small>Generated on Mon Oct 22 09:12:12 2007 for mtag by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.2 </small></address>
 </body>
