@@ -1,3 +1,4 @@
-2007/10/22	fix paths, bug: #12231
+2007/10/22	support stripping leading path, feature reqest: #3798
+		fix paths, bug: #12231
 2007/10/21	init changlog
 		get database from env(MTAG_DB) if set
